--- a/Mafia/Base.lproj/LaunchScreen.storyboard
+++ b/Mafia/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,6 +22,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="W3Q-bf-IcX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Title logo" translatesAutoresizingMaskIntoConstraints="NO" id="UpH-Ew-WgQ">
                                 <rect key="frame" x="67" y="137" width="240" height="128"/>
                                 <constraints>
@@ -30,21 +33,15 @@
                                     <constraint firstAttribute="height" constant="128" id="s7n-EW-tVN"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bottom people" translatesAutoresizingMaskIntoConstraints="NO" id="eCe-ca-yEJ">
-                                <rect key="frame" x="0.0" y="490" width="375" height="177"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="eCe-ca-yEJ" secondAttribute="height" multiplier="125:59" id="JV5-gj-XdW"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="UpH-Ew-WgQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="117" id="75I-Ph-4u9"/>
-                            <constraint firstItem="eCe-ca-yEJ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="VLC-Vp-x9x"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="W3Q-bf-IcX" secondAttribute="bottom" id="d5h-q5-KvB"/>
+                            <constraint firstAttribute="trailing" secondItem="W3Q-bf-IcX" secondAttribute="trailing" id="dUv-RN-Nw4"/>
+                            <constraint firstItem="W3Q-bf-IcX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="eeH-4o-c4m"/>
                             <constraint firstItem="UpH-Ew-WgQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fsx-lb-czO"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="eCe-ca-yEJ" secondAttribute="bottom" id="iRQ-eZ-0ha"/>
-                            <constraint firstAttribute="trailing" secondItem="eCe-ca-yEJ" secondAttribute="trailing" id="jjG-5i-wiH"/>
-                            <constraint firstItem="eCe-ca-yEJ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="qNh-hb-T7n"/>
+                            <constraint firstItem="W3Q-bf-IcX" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="jSK-Tz-TXw"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -54,7 +51,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Bottom people" width="375" height="152"/>
-        <image name="Title logo" width="221" height="87"/>
+        <image name="Title logo" width="220" height="87"/>
+        <image name="bg" width="960" height="1704"/>
     </resources>
 </document>
